Fix scaling on mobile devices.

--- a/src/Jsonize-Web/wwwroot/css/site.scss
+++ b/src/Jsonize-Web/wwwroot/css/site.scss
@@ -60,6 +60,10 @@ p {
     word-break: break-word;
 }
 
+.config-toggle {
+    display: inline-block;
+}
+
 .container {
     border-top: 1px solid #dbdbdb;
     color: $soft-black;
@@ -223,6 +227,10 @@ p {
 		width: 90%;
 
 	}
+
+    .config-toggle {
+       width: 100%; 
+    }
 
 	.hamburger {
 		padding-top: 15px;
